bebytes/tests/compile_time/overlap.stderr
error: U8 attributes must obey the sequence specified by the previous attributes. Expected position 4 but got 3
 --> tests/compile_time/overlap.rs:7:5
  |
7 | /     #[U8(size(4), pos(3))]
8 | |     second: u8,
  | |______________^

error[E0599]: cannot write into `&mut String`
 --> tests/compile_time/overlap.rs:3:10
  |
3 | #[derive(BeBytes, Debug, PartialEq)]
  |          ^^^^^^^ method not found in `&mut String`
  |
note: must implement `io::Write`, `fmt::Write`, or have a `write_fmt` method
 --> tests/compile_time/overlap.rs:3:10
  |
3 | #[derive(BeBytes, Debug, PartialEq)]
  |          ^^^^^^^
  = help: items from traits can only be used if the trait is in scope
  = note: this error originates in the derive macro `BeBytes` (in Nightly builds, run with -Z macro-backtrace for more info)
help: the following trait is implemented but not in scope; perhaps add a `use` for it:
  |
1 + use std::fmt::Write;
  |
